--- a/JavaScript/jQUERY/eventos.html
+++ b/JavaScript/jQUERY/eventos.html
@@ -23,15 +23,33 @@
 			width:   300px;
 			font-size: 20px;
 		}
+		#datos{
+			width: 250px;
+			height: 50px;
+			border: 2px solid black;	
+		}
+		#sigueme{
+			width: 25px;
+			height: 25px;
+			position: absolute;
+			display: block;
+			background: blue;
+			opacity: 0.5;
+			border-radius: 999px;
+		}
 	</style>
 
 </head>
 	<body>
 		<h1>Aprendiendo jQuery</h1>
+		<div id="sigueme"></div>
 
 		<form>
 			<input type="text" id="nombre">
 		</form>
+		<br>
+		<div id="datos">	
+		</div>
 		<br>
 		<div id="caja">
 			Caja
