--- a/JavaScript/jQUERY/interface.html
+++ b/JavaScript/jQUERY/interface.html
@@ -5,8 +5,21 @@
     <title>jQuery UI</title>
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui-1.12.1/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="js/01-selectores.js"></script>
+	<script type="text/javascript" src="js/06-interface.js"></script>
+	<style>
+		.elemento{
+			width: 300px;
+			height: 200px;
+			border: 4px solid black;
+			background: lightblue;
+			margin: 20px;
+			float: left;
+		}
+	</style>	
 </head>
 	<body>
+		<div class="elemento">Elemento de la web 1</div>
+		<div class="elemento">Elemento de la web 2</div>
+		<div class="elemento">Elemento de la web 3</div>
 	</body>
 </html>
