--- a/Proyecto-JS/about.html
+++ b/Proyecto-JS/about.html
@@ -8,13 +8,11 @@
 
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <!--Slider-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"/>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <link rel="stylesheet" href="js/jquery-ui/jquery-ui.min.css" />
+    <link rel="stylesheet" href="js/jquery-ui/jquery-ui.structure.min.css" />
+    <link rel="stylesheet" href="js/jquery-ui/jquery-ui.theme.min.css" />
+    <script type="text/javascript" src="js/jquery-ui/jquery-ui.min.js"></script>
 
-    <!--Moment-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/es.js"></script>
     <!--Scripts-->
     <script type="text/javascript" src="js/main.js"></script>
 </head>
@@ -40,19 +38,26 @@
                     </ul>
                 </nav>            
         </header>
-        <!--Slider-->
-        <div id="slider">
-            <div class="bxslider">
-                <div><img src="img/hojas.jpg" title="Hojas"></div>
-                <div><img src="img/rojo.jpg" title="Rojo"></div>
-                <div><img src="img/cielo.jpg" title="Cielo"></div>    
-            </div>      
-        </div>
 
         <!--Contenido-->
         <section id="content">
-            <div id="posts">
-                <!--Cargar desde JSON-->
+            <div id="box">
+                <!--Cargar Acordeon-->
+                <h2>Sobre mi</h2>
+                <div id="acordeon">
+                    <h3>¿Quienes somos?</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, voluptatem veniam repudiandae qui eum maxime aperiam sequi deserunt cupiditate nesciunt eligendi iste tempora impedit laborum fuga? Vero sint nostrum animi.
+                    </p>
+                    <h3>Nuestros servicio</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, voluptatem veniam repudiandae qui eum maxime aperiam sequi deserunt cupiditate nesciunt eligendi iste tempora impedit laborum fuga? Vero sint nostrum animi.
+                    </p>
+                    <h3>Nuestros clientes</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, voluptatem veniam repudiandae qui eum maxime aperiam sequi deserunt cupiditate nesciunt eligendi iste tempora impedit laborum fuga? Vero sint nostrum animi.
+                    </p>                    
+                </div>
             </div>
             <aside id="sidebar">
                 <div id="about">
